methods.slug.SlugSnail.scala.code
def isFacingTrail(c:Color):Boolean = {
  if (!estFaceMur){ 
    avance; 
    if (getCouleurSol ==Color.c) {
      recule ;
      return true;
    }
    else {recule ; return false}}
  else return false
  // Write your code here
}  

def hunt(c:Color) {
  while (!estSurBiscuit) {
    if (isFacingTrail(c)) {
      baisseBrosse ; 
      leveBrosse ; 
      avance
    }
    else { 
      left
    }
  } 

  prendBiscuit;baisseBrosse;leveBrosse;
  // Write your code here
}

// Copy your isFacingTrail() here
// Write your code here


// here comes your isFacingTrail method